SERVER-74930: Fix $avg is returning the sum instead of the average in aggregate $group